# mess

./: .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  error-plot.html  go.mod  go.sum  main.cpp  main.go  makefile  todo.txt  tuner-data.tune
.github/: pull_request_template.md
.github/workflows/: ci.yml
cmd/mess/: CMakeLists.txt  main.cpp  main.go
cmd/tests/: CMakeLists.txt
internal/engine/: cmdGo.go  cmdOthers.go  cmdPosition.go  cmdUci.go  engine.go
internal/engine/cmd/: bench.go  d.go  go.go  ponderhit.go  position.go  setoption.go  stop.go  uci.go  ucinewgame.go
internal/engine/context/: context.go
internal/engine/options/: hash.go  ponder.go  threads.go
internal/generator/: generate.go
internal/generator/attack/: .gotemplate  generate.go  nonSliding.go  sliding.go
internal/generator/bitboard/: .gotemplate  bitboard.go  generate.go
internal/generator/classical/: .gotemplate  generate.go
internal/generator/pesto/: .gotemplate  generate.go  tables.go
internal/generator/reductions/: .gotemplate  generate.go
internal/generator/zobrist/: .gotemplate  generate.go  zobrist.go
internal/util/: math.go  prng.go  ternary.go
lib/strutil/: CMakeLists.txt
pkg/attacks/: attack.go  bishop.go  king.go  knight.go  magic.go  pawn.go  queen.go  rook.go  sliding.go
pkg/board/: board.go  castling.go  fen.go  fen_test.go  move.go  moveGenState.go  movegen.go  perft.go  perft_test.go
pkg/board/bitboard/: bitboard.go  bitboards.go  hyperbola.go  useful.go
pkg/board/mailbox/: mailbox.go
pkg/board/move/: move.go  ordered.go  variation.go
pkg/board/move/attacks/: attack.go
pkg/board/move/attacks/magic/: magic.go
pkg/board/move/castling/: castling.go  rooks.go
pkg/board/piece/: color.go  piece.go
pkg/board/square/: diagonals.go  file.go  rank.go  square.go
pkg/board/zobrist/: keys.go  zobrist.go
pkg/castling/: castling.go  rooks.go
pkg/chess/: .gitignore  CMakeLists.txt  board.go  fen.go  fen_test.go  move.go  movegen.go  perft.go  perft_test.go
pkg/chess/bitboard/: bitboard.go  gen_bitboard.go  hyperbola.go  useful.go
pkg/chess/chess/: bitboard.hpp  board.hpp  castling.hpp  color.hpp  direction.hpp  fen.hpp  move.hpp  movegen.hpp  movelist.hpp  moves.hpp  piece.hpp  position.hpp  square.hpp  version.hpp.in  zobrist.hpp
pkg/chess/mailbox/: mailbox.go
pkg/chess/move/: move.go
pkg/chess/move/attacks/: attack.go  bishop.go  gen_attacks.go  king.go  knight.go  magic.go  nonSliding.go  pawn.go  queen.go  rook.go  sliding.go
pkg/chess/move/attacks/magic/: magic.go
pkg/chess/move/castling/: castling.go  rooks.go
pkg/chess/piece/: color.go  piece.go
pkg/chess/square/: diagonals.go  file.go  rank.go  square.go
pkg/evaluation/: absolute.go  evaluation.go  move.go  piece.go  relative.go
pkg/formats/fen/: fen.go
pkg/generator/attack/: generate.go  nonSliding.go  sliding.go
pkg/move/: castling.go  move.go
pkg/piece/: piece.go
pkg/search/: aspiration.go  board.go  deepning.go  evaluation.go  heuristics.go  limits.go  manager.go  negamax.go  quiescence.go  reductions.go  search.go  stats.go  tranposition.go  util.go
pkg/search/eval/: evaluation.go  move.go  pesto.go  see.go  tables.go
pkg/search/eval/classical/: benchmark_test.go  classical.go  default.go  phase.go  score.go  score_test.go  tables.go  terms.go
pkg/search/eval/classical/tuner/: coeff.go  dataset.go  evaluation.go  gradient.go  tuner.go  vector.go
pkg/search/eval/classical/tuner/datagen/: datagen.py  datagen.sh  dirty-data.tune  generate.go  tuner-data.tune
pkg/search/eval/pesto/: pesto.go  phase.go  score.go  tables.go
pkg/search/evaluation/: absolute.go  evaluation.go  move.go  piece.go  relative.go
pkg/search/time/: manager.go
pkg/search/transposition/: tranposition.go
pkg/search/tt/: table.go
pkg/square/: diagonals.go  file.go  rank.go  square.go
pkg/types/: CMakeLists.txt
pkg/uci/: defaults.go  uci.go
pkg/uci/cmd/: command.go
pkg/uci/flag/: flag.go
pkg/uci/option/: option.go
pkg/util/: math.go
pkg/zobrist/: gen_keys.go  prng.go  zobrist.go
scripts/: main.go  tuned.go
scripts/datagen/: main.go
scripts/tune/: main.go
scripts/util/: cmd.go
src/: main.cpp
src/cmd/: CMakeLists.txt  main.cpp
src/lib/: strutil.h
src/pkg/chess/: bitboard.hpp  board.hpp  castling.hpp  color.hpp  direction.hpp  fen.hpp  move.hpp  movegen.hpp  movelist.hpp  moves.hpp  piece.hpp  position.hpp  square.hpp  zobrist.hpp
src/pkg/types/: CMakeLists.txt
src/pkg/uci/: uci.hpp
src/pkg/util/: reverse.hpp  types.hpp
testing/: testing.go
tests/common/: common.hpp.in
tests/perft/: perft.cpp  standard.epd
